--- a/app/src/main/res/layout/widget_item.xml
+++ b/app/src/main/res/layout/widget_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<!--This is for a stack widget that is no longer in use-->
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/widget_item"
     android:layout_width="120dp"
