removed many unnecessary files, widget now updates after 30minsgit add --all!

--- a/app/src/main/res/xml/widgetinfo.xml
+++ b/app/src/main/res/xml/widgetinfo.xml
@@ -6,8 +6,8 @@ the default update period style
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:minWidth="222dip"
     android:minHeight="222dip"
-    android:updatePeriodMillis="0"
+    android:updatePeriodMillis="900000"
 
-    android:initialLayout="@layout/listview_layout"
-    android:autoAdvanceViewId="@id/listviewshow">
+    android:initialLayout="@layout/listview_layout">
+<!--    android:autoAdvanceViewId="@id/listviewshow">-->
 </appwidget-provider>
