--- a/app/src/main/res/layout/listview_layout.xml
+++ b/app/src/main/res/layout/listview_layout.xml
@@ -16,7 +16,7 @@
             android:layout_height="match_parent"
             android:layout_marginTop="3dp"
             android:layout_marginLeft="3dp"
-            android:background="#C0C0C0" />
+            android:background="#C0C0C0"></ListView>
         <TextView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/empty_listview"
             android:layout_width="match_parent"
